# Stefan_pose_estimation

./: Data_synthesis.py  README.md  img_aug.py
Angle_train/: train.py
Ros_pkg/: README.md
Ros_pkg/ros_pose_estimation/: CMakeLists.txt  package.xml  subscriber.cpp
Ros_pkg/ros_pose_estimation/launch/: partDetection.launch  partDetection_visualize.launch
Ros_pkg/ros_pose_estimation/msg/: Mat.msg
Ros_pkg/ros_pose_estimation/object_pcd/: back.pcd  bottom.pcd  left.pcd  long.pcd  right.pcd  short.pcd
Ros_pkg/ros_pose_estimation/src/: pose_estimation.cpp  pose_query.cpp  rawPointCloudViewer.cpp
Ros_pkg/ros_pose_estimation/srv/: PoseResult.srv
Ros_pkg/yolov3/: CMakeLists.txt  classes.names  package.xml
Ros_pkg/yolov3/src/: detector.py
Ros_pkg/yolov3/src/utils/: utils.py
Yolov3+Angle_net/: README.md  Synthesis.py
Yolov3+Angle_net/Angle_train/: dataset.py  model.py  train.py
Yolov3+Angle_net/Yolo_train/: train.py
Yolov3+Angle_net/Yolo_train/utils/: utils.py
